# server/controllers/property.js
@@ -1,6 +1,7 @@
 import Joi from 'joi';
 import uploadImages from '../utils/upload-files';
 import Properties from '../models/Properties';
+import Users from '../models/Users';
 import { createPropertySchema } from '../middleware/modelValidation';
 
 /*
@@ -8,9 +9,44 @@ import { createPropertySchema } from '../middleware/modelValidation';
 @@ Method         GET
 @@ Description    Get all property adverts.
 */
-// export const getProperties = (req, res, next) => {
-//   return res.send('all properties');
-// };
+export const getProperties = (req, res, next) => {
+  const {
+    location, type, deal, price
+  } = req.query;
+  let properties = Properties;
+
+  if (!properties.length) return res.status(204).json({ data: { message: 'No content' } });
+
+  if (type)
+    properties = properties.filter(p => p.title.toLowerCase().startsWith(type.toLowerCase()));
+
+  if (deal) properties = properties.filter(p => p.deal_type.toLowerCase() === deal.toLowerCase());
+
+  if (price) properties = properties.filter(p => parseInt(p.price, 10) <= parseInt(price, 10));
+
+  if (location) {
+    properties = properties.filter(
+      p =>
+        p.state.toLowerCase().startsWith(location.toLowerCase())
+        || p.city.toLowerCase().startsWith(location.toLowerCase())
+        || p.address.toLowerCase().startsWith(location.toLowerCase())
+    );
+  }
+  properties = properties.map((property) => {
+    const owner = Users.find(u => u.id === property.owner);
+    const {
+      first_name: firstName, last_name: lastName, email, phone_number: phone
+    } = owner;
+    return {
+      ...property,
+      owner: firstName.concat(' ', lastName),
+      ownerEmail: email,
+      ownerPhoneNumber: phone
+    };
+  });
+
+  res.status(200).json({ status: 200, data: properties });
+};
 
 /*
 @@ Route          /api/v1/property
