# server/models/Properties.js
@@ -1,3 +1,68 @@
-const Properties = [];
+const Properties = [
+  // {
+  //   id: 1,
+  //   title: '2 bedroom bungalow',
+  //   price: '200000',
+  //   state: 'Delta',
+  //   city: 'Warri',
+  //   address: '20 5 igbudu',
+  //   type: '2 bedroom',
+  //   billing_type: 'per year',
+  //   description: 'This room is nices',
+  //   deal_type: 'for sale',
+  //   owner: 1,
+  //   status: 'available',
+  //   created_on: 1561268711265,
+  //   image_url: []
+  // },
+  // {
+  //   id: 2,
+  //   title: '1 bedroom bungalow',
+  //   price: '200000',
+  //   state: 'Lagos',
+  //   city: 'Warri',
+  //   address: '20 5 igbudu',
+  //   type: '2 bedroom',
+  //   billing_type: 'per year',
+  //   description: 'This room is nices',
+  //   deal_type: 'for rent',
+  //   owner: 2,
+  //   status: 'available',
+  //   created_on: 1561268711265,
+  //   image_url: []
+  // },
+  // {
+  //   id: 3,
+  //   title: '4 bedroom bungalow',
+  //   price: '500000',
+  //   state: 'Delta',
+  //   city: 'Warri',
+  //   address: '20 5 igbudu',
+  //   type: '2 bedroom',
+  //   billing_type: 'per year',
+  //   description: 'This room is nices',
+  //   deal_type: 'for rent',
+  //   owner: 2,
+  //   status: 'available',
+  //   created_on: 1561268711265,
+  //   image_url: []
+  // },
+  // {
+  //   id: 4,
+  //   title: '2 bedroom bungalow',
+  //   price: '700000',
+  //   state: 'Abuja',
+  //   city: 'Warri',
+  //   address: '20 5 igbudu',
+  //   type: '1 bedroom',
+  //   billing_type: 'per year',
+  //   description: 'This room is nices',
+  //   deal_type: 'for rent',
+  //   owner: 1,
+  //   status: 'available',
+  //   created_on: 1561268711265,
+  //   image_url: []
+  // }
+];
 
 export default Properties;
